# 7.2 Array
add_executable(cont_array1 array1.cpp)

# 7.3 Vector
add_executable(cont_vector1 vector1.cpp)

# 7.4 Deque
add_executable(cont_deque1 deque1.cpp)

# 7.5 List
add_executable(cont_list1 list1.cpp)

# 7.7 Set 和 Multiset
add_executable(cont_setrange1 setrange1.cpp)
add_executable(cont_set1 set1.cpp)
add_executable(cont_multiset1 multiset1.cpp)
add_executable(cont_setcmp1 setcmp1.cpp)