# 7.2 Array
add_executable(cont_array1 array1.cpp)

# 7.3 Vector
add_executable(cont_vector1 vector1.cpp)

# 7.4 Deque
add_executable(cont_deque1 deque1.cpp)

# 7.5 List
add_executable(cont_list1 list1.cpp)

# 7.7 Set 和 Multiset
add_executable(cont_setrange1 setrange1.cpp)
add_executable(cont_set1 set1.cpp)
add_executable(cont_multiset1 multiset1.cpp)
add_executable(cont_setcmp1 setcmp1.cpp)

# 7.8 Map 和 Multimap
add_executable(cont_map1 map1.cpp)
add_executable(cont_map2 map2.cpp)
add_executable(cont_multimap1 multimap1.cpp)
add_executable(cont_mapfind1 mapfind1.cpp)
add_executable(cont_mapcmp1 mapcmp1.cpp)

# 7.9 无序容器（Unordered Container）
add_executable(cont_unordset1 unordset1.cpp)
add_executable(cont_unordmultiset1 unordmultiset1.cpp)
add_executable(cont_hashfunc1 hashfunc1.cpp)
add_executable(cont_hashfunc2 hashfunc2.cpp)
add_executable(cont_unordinspect1 unordinspect1.cpp)
add_executable(cont_unordmultimap1 unordmultimap1.cpp)

# 7.10.2 C-Style Array 作为一种 STL 容器
add_executable(cont_cstylearray1 cstylearray1.cpp)
add_executable(cont_cstylearray1old cstylearray1old.cpp)

# 7.11 实现 Reference 语义
add_executable(cont_refsem1 refsem1.cpp)
add_executable(cont_refwrap1 refwrap1.cpp)

# 7.12 各种容器的使用时机
add_executable(cont_sortset sortset.cpp)
add_executable(cont_sortvec sortvec.cpp)