# 10.1 Function Object（函数对象）的概念
add_executable(fo_sort1 sort1.cpp)
add_executable(fo_sequence1 sequence1.cpp)
add_executable(fo_sequence2 sequence2.cpp)
add_executable(fo_foreach3 foreach3.cpp)
add_executable(fo_removeif1 removeif1.cpp)

# 10.2 预定义的 Function Object 和 Binder
add_executable(fo_bind1 bind1.cpp)
add_executable(fo_compose3 compose3.cpp)
add_executable(fo_bind2 bind2.cpp)