# 9.2.5 Random-Access（随机访问）迭代器
add_executable(iter_itercategory1 itercategory1.cpp)

# 9.3 迭代器相关辅助函数
add_executable(iter_advance1 advance1.cpp)
add_executable(iter_distance1 distance1.cpp)
add_executable(iter_iterswap1 iterswap1.cpp)

# 9.4.1 Reverse（反向）迭代器
add_executable(iter_reviter1 reviter1.cpp)
add_executable(iter_reviter2 reviter2.cpp)
add_executable(iter_reviter3 reviter3.cpp)
add_executable(iter_reviter4 reviter4.cpp)

# 9.4.2 Insert（安插型）迭代器
add_executable(iter_backinserter1 backinserter1.cpp)
add_executable(iter_frontinserter1 frontinserter1.cpp)
add_executable(iter_inserter1 inserter1.cpp)

# 9.4.3 Stream（串流）迭代器
add_executable(iter_ostreamiter1 ostreamiter1.cpp)
add_executable(iter_istreamiter1 istreamiter1.cpp)
add_executable(iter_advance2 advance2.cpp)