add_executable(vector1 vector1.cpp)
add_executable(deque1 deque1.cpp)
add_executable(array1 array1.cpp)
add_executable(list1 list1.cpp)
add_executable(list2 list2.cpp)
add_executable(forwardlist1 forwardlist1.cpp)
add_executable(multiset1 multiset1.cpp)
add_executable(multimap1 multimap1.cpp)
add_executable(unordmultiset1 unordmultiset1.cpp)
add_executable(unordmap1 unordmap1.cpp)
add_executable(assoarray1 assoarray1.cpp)