# 6.2 容器（Container）
add_executable(vector1 vector1.cpp)
add_executable(deque1 deque1.cpp)
add_executable(array1 array1.cpp)
add_executable(list1 list1.cpp)
add_executable(list2 list2.cpp)
add_executable(forwardlist1 forwardlist1.cpp)
add_executable(multiset1 multiset1.cpp)
add_executable(multimap1 multimap1.cpp)
add_executable(unordmultiset1 unordmultiset1.cpp)
add_executable(unordmap1 unordmap1.cpp)
add_executable(assoarray1 assoarray1.cpp)

# 6.3 迭代器（Iterator）
add_executable(list1old list1old.cpp)
add_executable(set1 set1.cpp)
add_executable(unordmultiset2 unordmultiset2.cpp)

# 6.4 算法（Algorithm）
add_executable(algo1 algo1.cpp)
add_executable(algo1old algo1old.cpp)
add_executable(find1 find1.cpp)
add_executable(copybug copybug.cpp)
add_executable(copy1 copy1.cpp)

# 6.5 迭代器之适配器（Iterator Adapter）
add_executable(copy2 copy2.cpp)
add_executable(ioiter1 ioiter1.cpp)
add_executable(reviter1 reviter1.cpp)

# 6.7 更易型算法（Manipulating Algorithm）
add_executable(remove1 remove1.cpp)
add_executable(remove2 remove2.cpp)
add_executable(remove3 remove3.cpp)
add_executable(remove4 remove4.cpp)

# 6.8 以函数作为算法的实参
add_executable(foreach1 foreach1.cpp)
add_executable(transform1 transform1.cpp)
add_executable(prime1 prime1.cpp)
add_executable(sort1 sort1.cpp)

# 6.9 使用 Lambda
add_executable(lambda1 lambda1.cpp)
add_executable(sort2 sort2.cpp)

# 6.10 函数对象（Function Object）
add_executable(foreach2 foreach2.cpp)
add_executable(add1 add1.cpp)
add_executable(fo1 fo1.cpp)
add_executable(bind1 bind1.cpp)

# 6.12 STL 内部的错误和异常
add_executable(iterbug iterbug.cpp)