# 6.2 容器（Container）
add_executable(stl_vector1 vector1.cpp)
add_executable(stl_deque1 deque1.cpp)
add_executable(stl_array1 array1.cpp)
add_executable(stl_list1 list1.cpp)
add_executable(stl_list2 list2.cpp)
add_executable(stl_forwardlist1 forwardlist1.cpp)
add_executable(stl_multiset1 multiset1.cpp)
add_executable(stl_multimap1 multimap1.cpp)
add_executable(stl_unordmultiset1 unordmultiset1.cpp)
add_executable(stl_unordmap1 unordmap1.cpp)
add_executable(stl_assoarray1 assoarray1.cpp)

# 6.3 迭代器（Iterator）
add_executable(stl_list1old list1old.cpp)
add_executable(stl_set1 set1.cpp)
add_executable(stl_unordmultiset2 unordmultiset2.cpp)

# 6.4 算法（Algorithm）
add_executable(stl_algo1 algo1.cpp)
add_executable(stl_algo1old algo1old.cpp)
add_executable(stl_find1 find1.cpp)
add_executable(stl_copybug copybug.cpp)
add_executable(stl_copy1 copy1.cpp)

# 6.5 迭代器之适配器（Iterator Adapter）
add_executable(stl_copy2 copy2.cpp)
add_executable(stl_ioiter1 ioiter1.cpp)
add_executable(stl_reviter1 reviter1.cpp)

# 6.7 更易型算法（Manipulating Algorithm）
add_executable(stl_remove1 remove1.cpp)
add_executable(stl_remove2 remove2.cpp)
add_executable(stl_remove3 remove3.cpp)
add_executable(stl_remove4 remove4.cpp)

# 6.8 以函数作为算法的实参
add_executable(stl_foreach1 foreach1.cpp)
add_executable(stl_transform1 transform1.cpp)
add_executable(stl_prime1 prime1.cpp)
add_executable(stl_sort1 sort1.cpp)

# 6.9 使用 Lambda
add_executable(stl_lambda1 lambda1.cpp)
add_executable(stl_sort2 sort2.cpp)

# 6.10 函数对象（Function Object）
add_executable(stl_foreach2 foreach2.cpp)
add_executable(stl_add1 add1.cpp)
add_executable(stl_fo1 fo1.cpp)
add_executable(stl_bind1 bind1.cpp)

# 6.12 STL 内部的错误和异常
add_executable(stl_iterbug iterbug.cpp)